fix(View 2): prevents search tabs from wrapping if French + Location

--- a/src/components/SearchBar/Tab/styles.scss
+++ b/src/components/SearchBar/Tab/styles.scss
@@ -4,7 +4,7 @@
 .Tab {
   display: inline-block;
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: 12px;
   width: max-content;
   padding: 5px;
   font-size: 11px;
@@ -13,6 +13,11 @@
   font-family: $fira-sans-condensed;
   text-align: center;
   border-bottom-color: white;
+
+  &:last-of-type {
+    margin-right: 0;
+  }
+
   &.inactiveTab {
     border-bottom: 1px solid $LightGray;
     margin-top: 1px;
